test/libyul/yulSyntaxTests/switch_invalid_expr_1.yul
{
    switch {}
    case 1 {}
    default {}
}
// ----
// ParserError 1856: (13-14): Literal or identifier expected.
